# pg_valid

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pg_valid.control
doc/: 0_validation.md  1_domains.md  features.md
expected/: regression.out
sql/: pg_valid--1.0.sql  regression.sql
sql/src/: 0_functions.sql  1_domains.sql
src/: alpha.c  alpha_case.c  email.c  html.c  pg_valid.c  pg_valid.h  ws.c
src/pg/: pg_alpha.c  pg_alpha.h  pg_alpha_case.c  pg_alpha_case.h  pg_email.c  pg_email.h  pg_html.c  pg_html.h  pg_mkdir.c  pg_mkdir.h  pg_ws.c  pg_ws.h
test/: alpha_case_test.c  alpha_test.c  assert.c  assert.h  email_test.c  html_test.c  main.c  ws_test.c
